--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,16 @@
     {% endif %}
   </head>
   <body>
-    <div>Microblog: <a href="/index.html">Home</a></div>
+    <div>Microblog: <a href="/index">Home</a></div>
     <hr>
+    {% with messages = get_flashed_messages() %}
+    {% if messages %}
+    <ul>
+      {% for message in messages %}
+        <li>{{message}}
+      {% endfor %}
+    </ul>
+    {% endif %}
+    {% endwith %}
     {% block content %}{% endblock %}
 </html>
