--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -5,7 +5,7 @@
   {{form.hidden_tag()}}
   <p>
     Please enter your OpenID:<br>
-    {{form.open_id(size=80)}}<br>
+    {{form.openid(size=80)}}<br>
   </p>
   <p>{{form.remember_me}} Remember me</p>
   <input type="submit" value="Sign In">
